--- a/assets-overview-details.html
+++ b/assets-overview-details.html
@@ -36,19 +36,19 @@
                         <div class="navbar-brand-box">
                             <a href="index.html" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="https://lh3.googleusercontent.com/proxy/NBIQ61p5aWto28UHFf1_KaqOvCivK8KXuTYkG3SUtNohFCqLhWPeJsft_RyJeOF0TWIX2eH05StWwUN_I9vjP7zwS99Z6mbBOfY-4rh-8g" alt="" height="16">
+                                    <img src="assets/images/pi.png" alt="" height="16">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="https://lh3.googleusercontent.com/proxy/NBIQ61p5aWto28UHFf1_KaqOvCivK8KXuTYkG3SUtNohFCqLhWPeJsft_RyJeOF0TWIX2eH05StWwUN_I9vjP7zwS99Z6mbBOfY-4rh-8g" alt="" height="60">
+                                    <img src="assets/images/pi.png" alt="" height="60">
                                 </span>
                             </a>
 
                             <a href="index.html" class="logo logo-light">
                                 <span class="logo-sm">
-                                    <img src="https://lh3.googleusercontent.com/proxy/NBIQ61p5aWto28UHFf1_KaqOvCivK8KXuTYkG3SUtNohFCqLhWPeJsft_RyJeOF0TWIX2eH05StWwUN_I9vjP7zwS99Z6mbBOfY-4rh-8g" alt="" height="16">
+                                    <img src="assets/images/pi.png" alt="" height="16">
                                 </span>
                                 <span class="logo-lg">
-                                    <img src="https://lh3.googleusercontent.com/proxy/NBIQ61p5aWto28UHFf1_KaqOvCivK8KXuTYkG3SUtNohFCqLhWPeJsft_RyJeOF0TWIX2eH05StWwUN_I9vjP7zwS99Z6mbBOfY-4rh-8g" alt="" height="60">
+                                    <img src="assets/images/pi.png" alt="" height="60">
                                 </span>
                             </a>
                         </div>
